--- a/TaskList.Backend/appsettings.Development.json
+++ b/TaskList.Backend/appsettings.Development.json
@@ -1,3 +1,6 @@
 {
-  "Environment":  "Development"
+  "Environment": "Development",
+  "Jwt": {
+    "Key": "63e9a37c-9c37-4d0a-a7e2-9ba36c3548fb"
+  }
 }
