--- a/TaskList.Frontend/package.json
+++ b/TaskList.Frontend/package.json
@@ -38,6 +38,7 @@
     "react-modal": "^3.16.1",
     "react-responsive-pagination": "^2.8.0",
     "react-router-dom": "^6.23.1",
+    "sass": "^1.94.1",
     "sass-loader": "^16.0.5",
     "source-map-loader": "^5.0.0",
     "style-loader": "^4.0.0",
