User improvment, population and use in authentication

--- a/TaskList.Infrastructure.Tests/TaskList.Infrastructure.Tests.csproj
+++ b/TaskList.Infrastructure.Tests/TaskList.Infrastructure.Tests.csproj
@@ -19,7 +19,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TaskList.WebApi\TaskList.WebApi.csproj" />
+    <ProjectReference Include="..\TaskList.Infrastructure\TaskList.Infrastructure.csproj" />
   </ItemGroup>
-
 </Project>
