--- a/TaskList.WebApi/TaskList.WebApi.csproj
+++ b/TaskList.WebApi/TaskList.WebApi.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <TreatWarningsAsErrorsx>true</TreatWarningsAsErrorsx>
-    <EnforceCodeStyleInBuildx>true</EnforceCodeStyleInBuildx>
-    <EnableNETAnalyzersx>true</EnableNETAnalyzersx>
-    <AnalysisModex>AllEnabledByDefault</AnalysisModex>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
   </PropertyGroup>
 
   <ItemGroup>
