--- a/TaskList.WebApi/appsettings.Development.json
+++ b/TaskList.WebApi/appsettings.Development.json
@@ -1,6 +1,8 @@
 {
   "Environment": "Development",
   "Jwt": {
-    "Key": "63e9a37c-9c37-4d0a-a7e2-9ba36c3548fb"
+    "Key": "63e9a37c-9c37-4d0a-a7e2-9ba36c3548fb",
+    "Issuer": "https://tasklist.lemon.io",
+    "Audience": "tasklist.api"
   }
 }
