--- a/TaskList.WebApp/package.json
+++ b/TaskList.WebApp/package.json
@@ -3,11 +3,8 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "build": "npm run prettier-fix && npm run lint && webpack --mode=development --env=development",
+    "build": "npm run lint && webpack --mode=development --env=development",
     "lint": "npx eslint --format stylish",
-    "prettier-fix": "npx prettier src --write",
-    "prettier-check": "npx prettier src --check",
-    "prettier-message": "node ./build-scripts/prettier-message.js",
     "watch": "webpack --mode=development  --env=development --watch"
   },
   "repository": {
@@ -19,23 +16,20 @@
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@tanstack/react-query": "^5.59.8",
-    "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "@types/react-modal": "^3.16.3",
     "axios": "^1.7.7",
     "css-loader": "^7.1.1",
-    "date-fns": "^4.1.0",
     "dotenv-webpack": "^8.1.0",
     "eslint": "^9.20.0",
     "eslint-config-prettier": "^10.0.1",
-    "lodash": "^4.17.21",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "prettier": "3.5.0",
     "primereact": "^10.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-modal": "^3.16.1",
     "react-responsive-pagination": "^2.8.0",
     "react-router-dom": "^6.23.1",
     "sass": "^1.94.1",
