--- a/TaskList.WebApp/package.json
+++ b/TaskList.WebApp/package.json
@@ -23,7 +23,7 @@
     "react-hook-form": "^7.66.1",
     "react-icons": "^5.3.0",
     "react-responsive-pagination": "^2.8.0",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
@@ -46,5 +46,5 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "yargs": "^17.7.2"
-  },
+  }
 }
